# voice_melody

./: .gitignore  CMakeLists.txt  README.md  voice_melody_cli.py
Source/: PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
